--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,10 @@ playlist_data.csv
 playlist_data.csv.zip
 data\playlist_data.csv
 data\playlist_data.csv.zip
+
+spotify_dataset.csv
+spotify_dataset.csv.zip
+data\spotify_dataset.csv
+data\spotify_dataset.csv.zip
+
 .cache
